made overlay darker

--- a/webroot/revenant/css/main.css
+++ b/webroot/revenant/css/main.css
@@ -43,6 +43,6 @@
   bottom: 0;
   left: 0;
   right: 0;
-  opacity: .7;
-  background-color: rgba(0, 176, 255, 0.1);
+  opacity: .9;
+  background-color: rgb(134, 145, 146);
 }
