remove login button form template

--- a/webroot/revenant/src/css/main.css
+++ b/webroot/revenant/src/css/main.css
@@ -19,11 +19,10 @@
 /*LOGIN*/
 
 .rev_login {
-  text-align: right;
-  display: none;
+  text-align: center;
 }
 
-.rev_login__contaier {
+.rev_login__container {
   height: 1px;
   opacity: 0;
   -webkit-transition: all .7s;
