--- a/webroot/revenant/templates/login.hbs
+++ b/webroot/revenant/templates/login.hbs
@@ -1,6 +1,5 @@
 <div class="rev_login">
-    <button class="rev_login_reveal">Revenant</button>
-    <div class="rev_login__contaier">
+    <div class="rev_login__container">
         <h2>Revenant Login</h2>
         <form class="rev_login__form">
             <input type="text" title="username" placeholder="username" />
